--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,6 +24,7 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion flutter.compileSdkVersion
@@ -53,15 +54,6 @@ android {
         versionName flutterVersionName
     }
 
-    signingConfigs {
-        debug {
-           keyAlias 'upload'
-           keyPassword 'miriT06665251'
-           storeFile file('upload-keystore.jks')
-           storePassword 'miriT06665251'
-        }
-    }
-
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
@@ -76,5 +68,7 @@ flutter {
 }
 
 dependencies {
+    implementation(platform("com.google.firebase:firebase-bom:32.5.0"))
+    implementation("com.google.firebase:firebase-analytics")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
