--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   cloud_firestore: ^4.12.2
   firebase_storage: ^11.4.1
   firebase_core_platform_interface: ^5.0.0
+  firebase_app_check: ^0.2.1+5
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
