--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   firebase_storage: ^11.4.1
   firebase_core_platform_interface: ^5.0.0
   firebase_app_check: ^0.2.1+5
+  printing: ^5.10.4
+  pdf: ^3.10.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
